syntax = "proto3";


package test.message;

option java_package = "io.edap.protobuf.test.message.v3";

message OneBoolFieldComment1 {
  // 第一行注释
  bool value = 1;
}